--- a/sass/main.sass
+++ b/sass/main.sass
@@ -37,7 +37,7 @@ html, body
 
 body
 	font-size: 16px
- 	position: relative
+	position: relative
 	line-height: 1.65
 	font-family: 'Roboto', sans-serif
 	overflow-x: hidden
@@ -55,6 +55,7 @@ body
 	background-color: #928bca
 	color: #fff
 
+
 header 
 	padding: 35px 0 30px
 	position: fixed
@@ -67,11 +68,13 @@ header
 	-webkit-transition: all 0.4s ease
 	transition: all 0.4s ease
 
+
 	ul 
 		list-style: none
 		display: flex
 		justify-content: space-around
 		margin: 0
+		padding: 0
 
 		a 
 			color: #435993
@@ -83,7 +86,6 @@ header
 				color: #1c1c1c
 	&.sticky 
  		padding: 15px 0 10px
- 	
 
 .content 
 	background:  url(../img/content_bg.png) repeat-x 50% 0
@@ -509,4 +511,101 @@ input::-moz-focus-outer
 	border: 0 
 
 
-@import "media" // Всегда в конце
+.openbutton
+	display: none
+
+/* Small Devices, Tablets */
+@media  (max-width : 768px)
+	header
+		ul.menu
+			width: 100%
+			top: 0
+			left: 0
+			right: 0
+			bottom: 0
+			z-index: 9998
+			min-height: 100%
+			height: 100%
+			background: #fff
+			margin: 0
+			position: fixed
+			display: none
+			padding: 70px 10px
+			text-align: left
+
+			li 
+				padding: 15px
+				border-bottom: 1px solid #1c1c1c
+
+			a 
+				font-size: 22px
+			
+
+			&.open
+			    display: block
+		
+		.openbutton
+			width: 30px
+			height: 30px
+			transform: rotate(0deg)
+			transition: .5s ease-in-out
+			position: absolute
+			cursor: pointer
+			border-bottom: 0
+			top: 30px
+			right: 30px
+			z-index: 9999
+			border-bottom: 0
+			display: block !important
+
+			 
+			span
+				display: block
+				position: absolute
+				height: 2px
+				width: 100%
+				background: black
+				border-radius: 2px
+				opacity: 1
+				left: 0
+				transform: rotate(0deg)
+				transition: .25s ease-in-out
+
+				&:nth-child(1)
+					top: 0px
+					transform-origin: left center
+
+				&:nth-child(2)
+					top: 10px
+					transform-origin: left center
+				
+
+				&:nth-child(3)
+					top: 20px
+					transform-origin: left center
+				
+			&.open span:nth-child(1)
+				transform: rotate(45deg)
+				top: -3px
+				left: 8px
+			
+			&.open span:nth-child(2)
+				width: 0%
+				opacity: 0
+			
+			&.open span:nth-child(3)
+				transform: rotate(-45deg)
+				top: 19px
+				left: 8px
+				
+
+/* Extra Small Devices, Phones */
+@media  (max-width : 480px)
+	.range_slider_info
+		span 
+			display: none
+	.range_slider_info
+		em 
+			display: block !important
+
+ 
